# gloa

./: .dir-locals.el  .gitignore  .guix-channel  Makefile.am  README  TODO.org  configure.ac  gloa.scm  guix.scm  pre-inst-env.in
.guix/modules/: gloa-package.scm
data/: schema.sql
doc/: gloa.texi  local.mk
gloa/: article.scm  config.scm  db.scm  entry.scm  hello.scm  store.scm  utils.scm
gloa/db/: add.scm  maintenance.scm  remove.scm  schema.sql  search.scm  utils.scm
gloa/importers/: bibtex.scm
gloa/ops/: add.scm
gloa/store/: add.scm  entry.scm  hash.scm  remove.scm  utils.scm
scripts/: gloa.in
tests/: article.scm  db-ops.scm  db.scm  import-bibtex.scm  store-ops.scm  test-multiple.bib  test.bib  test2.bib  utils.scm
